--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-slate-900 font-body px-5;
+    @apply bg-slate-900 font-body px-5 text-white;
   }
 }
 @layer components {
@@ -20,19 +20,6 @@
     height: 100%;
   }
 }
-/* pagination */
-
-.pagination {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-}
-
-.pagination .selected {
-  @apply text-primary;
-}
-
 .skeleton {
   background-color: #eee;
   background-image: linear-gradient(
@@ -43,4 +30,20 @@
   );
   background-size: 200% 100%;
   animation: 1.5s shine linear infinite;
+}
+
+@keyframes shine {
+  to {
+    background-position-x: -200%;
+  }
+}
+/* pagination */
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.pagination .selected {
+  @apply text-primary;
 }
